--- a/comparison.html
+++ b/comparison.html
@@ -9,6 +9,40 @@
     <title>Comparison</title>
 </head>
 <body>
-    <p>Comparison</p>
+    <!--Create Navigation Bar-->
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <!-- Brand -->
+            <a class="navbar-brand lat_head" href="">Latitude</a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="right_head link_style">
+            <!--Plots Dropdown-->
+                <ul class="navbar-nav ">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">    <!--Where does href go to?--> <!--Can't get dropdown to work-->
+                        Plots
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="https://jcrettig.github.io/Web-Design-Challenge/max_temp">Latitude vs. Max Temperature</a>
+                            <a class="dropdown-item" href="https://jcrettig.github.io/Web-Design-Challenge/humidity">Latitude vs. Humidity</a>
+                            <a class="dropdown-item" href="https://jcrettig.github.io/Web-Design-Challenge/cloudiness">Latitude vs. Cloudiness</a>
+                            <a class="dropdown-item" href="https://jcrettig.github.io/Web-Design-Challenge/wind_speed">Latitude vs. Wind Speed</a>
+                        </div>
+                    </li>
+                    <!-- Comparison and Data Links -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://jcrettig.github.io/Web-Design-Challenge/comparison">Comparison</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://jcrettig.github.io/Web-Design-Challenge/data">Data</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 </body>
 </html>
