--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <title>Landing_Page</title>
 </head>
 <body>
+    <!--Create Navigation Bar-->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <!-- Brand -->
-            <a class="navbar-brand lat_head" href="https://jcrettig.github.io/Web-Design-Challenge/Landing_Page">Latitude</a>
+            <a class="navbar-brand lat_head" href="">Latitude</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -23,7 +24,7 @@
             <!--Plots Dropdown-->
                 <ul class="navbar-nav ">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">    <!--Where does href go to?--> <!--Can't get dropdown to work-->
                         Plots
                         </a>
                         <div class="dropdown-menu">
@@ -44,5 +45,9 @@
             </div>
         </div>
     </nav>
+    <div id = "MainHeader">
+        <h1>Summary: Latitude vs. X</h1>
+        <img src="https://github.com/jcrettig/Web-Design-Challenge/blob/jcrettig/Resources/assets/images/Fig1.png">
+    </div>
 </body>
 </html>
