--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div id = "MainHeader">
         <h1>Summary: Latitude vs. X</h1>
         <br>
-        <img src="https://github.com/jcrettig/Web-Design-Challenge/blob/jcrettig/Resources/assets/images/Fig1.png" alt="vs. Max Temperature" style="width:500px;height:600px;">
+        <img src="https://jcrettig.github.io/Web-Design-Challenge/Resources/assets/images/Fig1.png" alt="vs. Max Temperature" style="width:500px;height:600px;">
     </div>
 </body>
 </html>
