--- a/index.html
+++ b/index.html
@@ -45,10 +45,32 @@
             </div>
         </div>
     </nav>
-    <div id = "MainHeader">
-        <h1>Summary: Latitude vs. X</h1>
+    <div id="MainHeader">
+        <h2 class="Header1">Summary: Latitude vs. X</h1>
         <br>
-        <img src="https://jcrettig.github.io/Web-Design-Challenge/Resources/assets/images/Fig1.png" alt="vs. Max Temperature" style="width:500px;height:600px;">
+        <img id="body1" src="https://jcrettig.github.io/Web-Design-Challenge/Resources/assets/images/Fig1.png" 
+        alt="vs. Max Temperature" style="width: 150px;height: 150px;">
+        <div id="body2">
+            <p>
+                The purpose of this project was to analyze how weather changes as <br>
+                you get closer to the equator.  To accomplsh this, we first <br>
+                pulled data from the OpenWeatherMap API to assemble a dataset on <br>
+                over 500 cities
+            </p>
+            <p> After assembling the dataset, we used Matplotlib to plot various <br> 
+                aspects of the weather vs. latitude.  Factors we looked at included:
+            </p>
+        </div>
+        <p>
+            temperature, cloudiness, wind speed, and humidity.  This site provides the source data and <br>
+            visualizations created as part of the analysis, as well as explanations and descriptions of any <br>
+            trends and correlations witnessed.
+        </p>
+    </div>
+    <div id="SecondaryHeader">
+        <h3 class="subhead">Visualizations</h3> 
+
+
     </div>
 </body>
 </html>
