slowly but surely

--- a/index.html
+++ b/index.html
@@ -68,7 +68,19 @@
         </p>
     </div>
     <div id="SecondaryHeader">
-        <h3 class="subhead">Visualizations</h3> 
+        <h4 class="subhead">Visualizations</h4> 
+        <a href="https://jcrettig.github.io/Web-Design-Challenge/Resources/assets/images/Fig1.png">
+            <img src="https://jcrettig.github.io/Web-Design-Challenge/max_temp" alt="Latitude vs. Max Temperature" style="width:42px;height:42px;">
+        </a>
+        <a href="https://jcrettig.github.io/Web-Design-Challenge/Resources/assets/images/Fig2.png">
+            <img src="https://jcrettig.github.io/Web-Design-Challenge/humidity" alt="Latitude vs. Humidity" style="width:42px;height:42px;">
+        </a>
+        <a href="https://jcrettig.github.io/Web-Design-Challenge/Resources/assets/images/Fig3.png">
+            <img src="https://jcrettig.github.io/Web-Design-Challenge/cloudiness" alt="Latitude vs. Cloudiness" style="width:42px;height:42px;">
+        </a>
+        <a href="https://jcrettig.github.io/Web-Design-Challenge/Resources/assets/images/Fig4.png">
+            <img src="https://jcrettig.github.io/Web-Design-Challenge/wind_speed" alt="Latitude vs. Windspeed" style="width:42px;height:42px;">
+        </a>
 
 
     </div>
