--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <title>Landing_Page</title>
 </head>
 <body>
-    <!--Create Navigation Bar-->
+    <!--------------------------------------------------------
+    Navigation Bar
+    ---------------------------------------------------------->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <!-- Brand -->
@@ -45,41 +47,65 @@
             </div>
         </div>
     </nav>
-    <div id="MainHeader">
-        <h2 class="Header1">Summary: Latitude vs. X</h1>
-        <br>
-        <img id="body1" src="https://jcrettig.github.io/Web-Design-Challenge/Resources/assets/images/Fig1.png" 
-        alt="vs. Max Temperature" style="width: 150px;height: 150px;">
-        <div id="body2">
-            <p>
-                The purpose of this project was to analyze how weather changes as <br>
-                you get closer to the equator.  To accomplsh this, we first <br>
-                pulled data from the OpenWeatherMap API to assemble a dataset on <br>
-                over 500 cities
-            </p>
-            <p> After assembling the dataset, we used Matplotlib to plot various <br> 
-                aspects of the weather vs. latitude.  Factors we looked at included:
-            </p>
+    <!--------------------------------------------------------
+    Summary: Latitude vs. X Section
+    ---------------------------------------------------------->
+    <div id="MainHeader" class="container">
+        <!--Row 1 Header-->
+        <div class="row">
+            <div class="col-md-12">
+                <h2 class="Header1">Summary: Latitude vs. X</h1>
+            </div>
         </div>
-        <p>
-            temperature, cloudiness, wind speed, and humidity.  This site provides the source data and <br>
-            visualizations created as part of the analysis, as well as explanations and descriptions of any <br>
-            trends and correlations witnessed.
-        </p>
+         <!--Row 2 chart and paragraphs-->
+        <div class="row">
+            <div class="col-md-3">
+                <img id="body1" src="https://jcrettig.github.io/Web-Design-Challenge/Resources/assets/images/Fig1.png" 
+                alt="vs. Max Temperature" style="width: 150px;height: 150px;">
+            </div>
+
+            <div class="col-md-9">
+                <div id="body2">
+                    <p>
+                        The purpose of this project was to analyze how weather changes as <br>
+                        you get closer to the equator.  To accomplsh this, we first <br>
+                        pulled data from the OpenWeatherMap API to assemble a dataset on <br>
+                        over 500 cities
+                    </p>
+
+                    <p> After assembling the dataset, we used Matplotlib to plot various <br> 
+                        aspects of the weather vs. latitude.  Factors we looked at included:
+                    </p>                    
+                </div>           
+            </div>
+         <!--Row 3 Final portion of the paragraph-->
+         <div class="row">
+            <div class="col-md-12">
+                <p>
+                    temperature, cloudiness, wind speed, and humidity.  This site provides the source data and <br>
+                    visualizations created as part of the analysis, as well as explanations and descriptions of any <br>
+                    trends and correlations witnessed.
+                </p>
+            </div>
+        </div>
     </div>
+    <!--------------------------------------------------------
+    Summary: Visualizations Section
+    ---------------------------------------------------------->
     <div id="SecondaryHeader">
         <h4 class="subhead">Visualizations</h4> 
-        <a href="https://jcrettig.github.io/Web-Design-Challenge/Resources/assets/images/Fig1.png">
-            <img src="https://jcrettig.github.io/Web-Design-Challenge/max_temp" alt="Latitude vs. Max Temperature" style="width:42px;height:42px;">
+        <a href="https://jcrettig.github.io/Web-Design-Challenge/max_temp">
+            <img src="https://jcrettig.github.io/Web-Design-Challenge/Resources/assets/images/Fig1.png" alt="Latitude vs. Max Temperature" style="width:100px;height:100px;">
         </a>
-        <a href="https://jcrettig.github.io/Web-Design-Challenge/Resources/assets/images/Fig2.png">
-            <img src="https://jcrettig.github.io/Web-Design-Challenge/humidity" alt="Latitude vs. Humidity" style="width:42px;height:42px;">
+        <a href="https://jcrettig.github.io/Web-Design-Challenge/humidity">
+            <img src="https://jcrettig.github.io/Web-Design-Challenge/Resources/assets/images/Fig2.png" alt="Latitude vs. Humidity" style="width:100px;height:100px;">
         </a>
-        <a href="https://jcrettig.github.io/Web-Design-Challenge/Resources/assets/images/Fig3.png">
-            <img src="https://jcrettig.github.io/Web-Design-Challenge/cloudiness" alt="Latitude vs. Cloudiness" style="width:42px;height:42px;">
+        <br>
+        <a href="https://jcrettig.github.io/Web-Design-Challenge/cloudiness">
+            <img src="https://jcrettig.github.io/Web-Design-Challenge/Resources/assets/images/Fig3.png" alt="Latitude vs. Cloudiness" style="width:100px;height:100px;">
         </a>
-        <a href="https://jcrettig.github.io/Web-Design-Challenge/Resources/assets/images/Fig4.png">
-            <img src="https://jcrettig.github.io/Web-Design-Challenge/wind_speed" alt="Latitude vs. Windspeed" style="width:42px;height:42px;">
+        <a href="https://jcrettig.github.io/Web-Design-Challenge/wind_speed">
+            <img src="https://jcrettig.github.io/Web-Design-Challenge/Resources/assets/images/Fig4.png" alt="Latitude vs. Windspeed" style="width:100px;height:100px;">
         </a>
 
 
