--- a/index.html
+++ b/index.html
@@ -53,18 +53,19 @@
     <div id="MainHeader" class="container">
         <!--Row 1 Header-->
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-8">
                 <h2 class="Header1">Summary: Latitude vs. X</h1>
             </div>
         </div>
          <!--Row 2 chart and paragraphs-->
         <div class="row">
-            <div class="col-md-3">
-                <img id="body1" src="https://jcrettig.github.io/Web-Design-Challenge/Resources/assets/images/Fig1.png" 
-                alt="vs. Max Temperature" style="width: 150px;height: 150px;">
+            <div class="col-md-1"></div>
+            <div class="col-md-2" >
+                <img class="chart1" src="https://jcrettig.github.io/Web-Design-Challenge/Resources/assets/images/Fig1.png" 
+                alt="vs. Max Temperature" style="width: 170px;height: 170px;">
             </div>
 
-            <div class="col-md-9">
+            <div class="col-md-5">
                 <div id="body2">
                     <p>
                         The purpose of this project was to analyze how weather changes as <br>
@@ -72,15 +73,16 @@
                         pulled data from the OpenWeatherMap API to assemble a dataset on <br>
                         over 500 cities
                     </p>
-
-                    <p> After assembling the dataset, we used Matplotlib to plot various <br> 
+                    <br>
+                    <p class="para1"> After assembling the dataset, we used Matplotlib to plot various <br> 
                         aspects of the weather vs. latitude.  Factors we looked at included:
                     </p>                    
                 </div>           
             </div>
          <!--Row 3 Final portion of the paragraph-->
          <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-1"></div>
+            <div class="col-md-7">
                 <p>
                     temperature, cloudiness, wind speed, and humidity.  This site provides the source data and <br>
                     visualizations created as part of the analysis, as well as explanations and descriptions of any <br>
@@ -92,23 +94,27 @@
     <!--------------------------------------------------------
     Summary: Visualizations Section
     ---------------------------------------------------------->
-    <div id="SecondaryHeader">
-        <h4 class="subhead">Visualizations</h4> 
-        <a href="https://jcrettig.github.io/Web-Design-Challenge/max_temp">
-            <img src="https://jcrettig.github.io/Web-Design-Challenge/Resources/assets/images/Fig1.png" alt="Latitude vs. Max Temperature" style="width:100px;height:100px;">
-        </a>
-        <a href="https://jcrettig.github.io/Web-Design-Challenge/humidity">
-            <img src="https://jcrettig.github.io/Web-Design-Challenge/Resources/assets/images/Fig2.png" alt="Latitude vs. Humidity" style="width:100px;height:100px;">
-        </a>
-        <br>
-        <a href="https://jcrettig.github.io/Web-Design-Challenge/cloudiness">
-            <img src="https://jcrettig.github.io/Web-Design-Challenge/Resources/assets/images/Fig3.png" alt="Latitude vs. Cloudiness" style="width:100px;height:100px;">
-        </a>
-        <a href="https://jcrettig.github.io/Web-Design-Challenge/wind_speed">
-            <img src="https://jcrettig.github.io/Web-Design-Challenge/Resources/assets/images/Fig4.png" alt="Latitude vs. Windspeed" style="width:100px;height:100px;">
-        </a>
-
-
+    <div id="SecondaryHeader" class="container">
+        <!--Row 1 Header-->
+        <div class="row">
+            <div class="col-md-3">
+                <h4 class="subhead">Visualizations</h4> 
+                <a href="https://jcrettig.github.io/Web-Design-Challenge/max_temp">
+                    <img src="https://jcrettig.github.io/Web-Design-Challenge/Resources/assets/images/Fig1.png" alt="Latitude vs. Max Temperature" style="width:100px;height:100px;">
+                </a>
+                <a href="https://jcrettig.github.io/Web-Design-Challenge/humidity">
+                    <img src="https://jcrettig.github.io/Web-Design-Challenge/Resources/assets/images/Fig2.png" alt="Latitude vs. Humidity" style="width:100px;height:100px;">
+                </a>
+                <br>
+                <a href="https://jcrettig.github.io/Web-Design-Challenge/cloudiness">
+                    <img src="https://jcrettig.github.io/Web-Design-Challenge/Resources/assets/images/Fig3.png" alt="Latitude vs. Cloudiness" style="width:100px;height:100px;">
+                </a>
+                <a href="https://jcrettig.github.io/Web-Design-Challenge/wind_speed">
+                    <img src="https://jcrettig.github.io/Web-Design-Challenge/Resources/assets/images/Fig4.png" alt="Latitude vs. Windspeed" style="width:100px;height:100px;">
+                </a>
+            </div>
+            <div class="col-md-1"></div>
+        </div>
     </div>
 </body>
 </html>
