--- a/wind_speed.html
+++ b/wind_speed.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <!-- Brand -->
-            <a class="navbar-brand lat_head" href="">Latitude</a>
+            <a class="navbar-brand lat_head" href="https://jcrettig.github.io/Web-Design-Challenge/index">Latitude</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
