--- a/data.html
+++ b/data.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <!-- Brand -->
-            <a class="navbar-brand lat_head" href="https://jcrettig.github.io/Web-Design-Challenge/index">Latitude</a>
+            <a class="navbar-brand lat_head hover1" href="https://jcrettig.github.io/Web-Design-Challenge/index">Latitude</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -24,8 +24,8 @@
             <div class="right_head link_style">
             <!--Plots Dropdown-->
                 <ul class="navbar-nav ">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">    <!--Where does href go to?--> <!--Can't get dropdown to work-->
+                    <li class="nav-item dropdown ">
+                        <a class="nav-link dropdown-toggle hover1" href="#" id="navbardrop" data-toggle="dropdown">    <!--Where does href go to?--> <!--Can't get dropdown to work-->
                         Plots
                         </a>
                         <div class="dropdown-menu">
@@ -37,10 +37,10 @@
                     </li>
                     <!-- Comparison and Data Links -->
                     <li class="nav-item">
-                        <a class="nav-link" href="https://jcrettig.github.io/Web-Design-Challenge/comparison">Comparison</a>
+                        <a class="nav-link hover1" href="https://jcrettig.github.io/Web-Design-Challenge/comparison">Comparison</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://jcrettig.github.io/Web-Design-Challenge/data">Data</a>
+                        <a class="nav-link hover1" href="https://jcrettig.github.io/Web-Design-Challenge/data">Data</a>
                     </li>
                 </ul>
             </div>
