--- a/data.html
+++ b/data.html
@@ -25,7 +25,7 @@
             <!--Plots Dropdown-->
                 <ul class="navbar-nav ">
                     <li class="nav-item dropdown ">
-                        <a class="nav-link dropdown-toggle hover1" href="#" id="navbardrop" data-toggle="dropdown">    <!--Where does href go to?--> <!--Can't get dropdown to work-->
+                        <a class=""nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"">    <!--Where does href go to?--> <!--Can't get dropdown to work-->
                         Plots
                         </a>
                         <div class="dropdown-menu">
@@ -7194,6 +7194,9 @@
             </tbody>
           </table>
         
-    </div>  ​     
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+      ​     
 </body>
+
 </html>
