--- a/max_temp.html
+++ b/max_temp.html
@@ -26,7 +26,7 @@
             <!--Plots Dropdown-->
                 <ul class="navbar-nav ">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle hover1" href="#" id="navbardrop" data-toggle="dropdown">    <!--Where does href go to?--> <!--Can't get dropdown to work-->
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">    <!--Where does href go to?--> <!--Can't get dropdown to work-->
                         Plots
                         </a>
                         <div class="dropdown-menu">
@@ -113,6 +113,8 @@
             <div class="col-md-3"></div>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+
 </body>
 </html>
 
