--- a/data.html
+++ b/data.html
@@ -25,7 +25,7 @@
             <!--Plots Dropdown-->
                 <ul class="navbar-nav ">
                     <li class="nav-item dropdown ">
-                        <a class=""nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"">    <!--Where does href go to?--> <!--Can't get dropdown to work-->
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">   
                         Plots
                         </a>
                         <div class="dropdown-menu">
